# c_pick

./: .envrc  .gitignore  Makefile  build-test.sh  meson.build
libpick/: compat-pledge.c  compat-reallocarray.c  compat-strtonum.c  config.h  libpick.c  libpick.h  meson.build  pty.c  pty.h
libpick-multiple-test/: libpick-multiple-test.c  meson.build
libpick-single-test/: libpick-single-test.c  meson.build
libpick-test/: libpick-test.c  meson.build
pick/: compat-strtonum.c  libpick.c  libpick.h  meson.build  pty.c
pick-test/: meson.build  pick-test.c
scripts/: Build-Test.sh
submodules/: meson.build
