subdir('c_deps/meson/deps/c_string_buffer')
subdir('c_deps/meson/deps/c_vector')
subdir('c_deps/meson/deps/c_stringfn')
subdir('c_deps/meson/deps/c_fsio')
subdir('c_deps/meson/deps/c_forever')
subdir('c_deps/meson/deps/c_eventemitter')
subdir('c_deps/meson/deps/djbhash')
subdir('c_deps/meson/deps/parson')
subdir('c_deps/meson/deps/bytes')
subdir('c_deps/meson/deps/c_greatest')
subdir('c_deps/meson/deps/debug-memory')
subdir('c_deps/meson/deps/which')
subdir('c_deps/meson/deps/log.h')
subdir('c_deps/meson/deps/timestamp')
subdir('c_deps/meson/deps/chan')
subdir('c_deps/meson/deps/env.h')
subdir('c_deps/meson/deps/tiny-regex-c')
subdir('c_deps/meson/deps/curses')
